--- a/src/Enbrea.Edoosys.Db.csproj
+++ b/src/Enbrea.Edoosys.Db.csproj
@@ -1,30 +1,34 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
-    <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
-    <Authors>STÜBER SYSTEMS GmbH</Authors>
-    <Company>STÜBER SYSTEMS GmbH</Company>
-    <Copyright>© 2021 STÜBER SYSTEMS GmbH</Copyright>
-    <Product>ENBREA EDOOSYS.DB</Product>
-    <Description>Reader class for the edoo.sys RLP database</Description>
-    <PackageLicenseUrl></PackageLicenseUrl>
-    <RepositoryType />
-    <NeutralLanguage></NeutralLanguage>
-    <Version>0.1.0</Version>
-    <PackageLicenseFile>LICENSE</PackageLicenseFile>
-    <RepositoryUrl>https://github.com/stuebersystems/enbrea.edoosys.db</RepositoryUrl>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net6.0</TargetFramework>
+		<GeneratePackageOnBuild>false</GeneratePackageOnBuild>
+		<Authors>STÜBER SYSTEMS GmbH</Authors>
+		<Company>STÜBER SYSTEMS GmbH</Company>
+		<Copyright>© 2022 STÜBER SYSTEMS GmbH</Copyright>
+		<Product>ENBREA EDOOSYS.DB</Product>
+		<Description>Reader class for the edoo.sys RLP database</Description>
+		<PackageLicenseUrl></PackageLicenseUrl>
+		<RepositoryType />
+		<NeutralLanguage></NeutralLanguage>
+		<Version>0.2.0</Version>
+		<PackageLicenseFile>LICENSE</PackageLicenseFile>
+		<RepositoryUrl>https://github.com/enbrea/enbrea.edoosys.db</RepositoryUrl>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <None Include="..\LICENSE">
-      <Pack>True</Pack>
-      <PackagePath></PackagePath>
-    </None>
-  </ItemGroup>
+	<ItemGroup>
+		<None Include="..\LICENSE">
+			<Pack>True</Pack>
+			<PackagePath></PackagePath>
+		</None>
+		<None Include="..\README.md">
+			<Pack>True</Pack>
+			<PackagePath></PackagePath>
+		</None>
+	</ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Npgsql" Version="5.0.1.1" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Npgsql" Version="6.0.4" />
+	</ItemGroup>
 
 </Project>
