--- a/test/SmokeTest/Enbrea.Edoosys.Db.SmokeTest.csproj
+++ b/test/SmokeTest/Enbrea.Edoosys.Db.SmokeTest.csproj
@@ -1,12 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>;net8.0</TargetFrameworks>
+    <TargetFrameworks>net9.0</TargetFrameworks>
     <Authors>STÜBER SYSTEMS GmbH</Authors>
     <Company>STÜBER SYSTEMS GmbH</Company>
-    <Copyright>© 2023 STÜBER SYSTEMS GmbH</Copyright>
-    <Product>ENBREA EDOOSYS.DB</Product>
-    <Description>Smoke test for ENBREA EDOOSYS.DB</Description>
+    <Copyright>© 2024 STÜBER SYSTEMS GmbH</Copyright>
+    <Product>Enbrea EDOOSYS.DB</Product>
+    <Description>Smoke test for Enbrea EDOOSYS.DB</Description>
     <OutputType>Exe</OutputType>
   </PropertyGroup>
 
@@ -25,8 +25,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="8.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.0" />
   </ItemGroup>
 
 </Project>
