--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -92,3 +92,46 @@ stages:
         arguments: 'sign $(Build.ArtifactStagingDirectory)/**/*.nupkg -Timestamper http://timestamp.digicert.com -CertificateFingerprint $(SM_CERT_FINGERPRINT) -HashAlgorithm SHA256 -Verbosity detailed -Overwrite'
     - publish: '$(Build.ArtifactStagingDirectory)'
       artifact: drop      
+      
+- stage: Deploy
+  jobs:
+  - job: 
+    steps:
+    - download: current
+      artifact: drop
+    - task: NuGetCommand@2
+      displayName: 'Publish preview to internal feed'
+      condition: and(succeeded(), ne(variables['Build.SourceBranch'], 'refs/heads/main'))
+      inputs:
+        command: 'push'
+        packagesToPush: '$(Pipeline.Workspace)/**/*.nupkg;!$(Pipeline.Workspace)/**/*.symbols.nupkg'
+        nuGetFeedType: 'internal'
+        publishVstsFeed: 'b0890edd-bcca-4a1c-b63c-d22daf6e4407/24f47e68-5eca-4ba8-8ab3-905662347d75'
+    - task: NuGetCommand@2
+      displayName: 'Publish to nuget.org'
+      condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/main'))
+      inputs:
+        command: 'push'
+        packagesToPush: '$(Pipeline.Workspace)/**/*.nupkg;!$(Pipeline.Workspace)/**/*.symbols.nupkg'
+        nuGetFeedType: 'external'
+        publishFeedCredentials: 'STUEBER SYSTEMS | nuget.org'
+
+- stage: GitHub
+  jobs:
+  - job: 
+    condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/main'))
+    steps:
+    - checkout: self
+      persistCredentials: true
+    - task: PowerShell@2
+      displayName: 'Push to GitHub'
+      inputs:
+        targetType: 'inline'
+        script: |
+          git remote add github https://$(PAT)@github.com/enbrea/enbrea.edoosys.db.git
+          git fetch github
+          git checkout .
+          git push github HEAD:main
+          git push --tags github HEAD:main
+        pwsh: true
+      
